Fixed build errors after merge

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
-   <groupId>org.monotype.com</groupId>
+   <groupId>org.creativelabs.com</groupId>
    
    <version>1.0</version>
    
@@ -94,8 +94,7 @@
 	    <developer>
 	        <id>ngaur</id>
 	        <name>Nayan Gaur</name>
-	        <organisation>Monotype</organisation>
-	        <organizationUrl>www.monotype.com</organizationUrl>
+	        <organisation>Creative Labs</organisation>
 	        <roles>
 	            <role>architech</role>
 	            <role>developer</role>
