--- a/auto-test-utils/pom.xml
+++ b/auto-test-utils/pom.xml
@@ -1,14 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.jabong</groupId>
+	<groupId>org.creativelabs</groupId>
 	<artifactId>auto_test_utils</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>Test_Common_Module</name>
-	<url>http://www.jabong.com</url>
 	<parent>
-	    <groupId>org.jabong.com</groupId>
+	    <groupId>org.creativelabs.com</groupId>
    		<version>1.0</version>
    		<artifactId>auto-test-parent</artifactId>
 	</parent>
