change in learning compiler properties file

--- a/auto-test-executor/src/main/resources/learnCompiler.properties
+++ b/auto-test-executor/src/main/resources/learnCompiler.properties
@@ -10,7 +10,7 @@ isTextPresent=verifytextpresent;textispresent;textisthere;istextthere;isthereate
 click=submit;clicking;
 closeAllBrowsersWindow=closewindows;closeallbrowsers;closebrowsers;closebrowserwindows;
 fireEvents=fireevent;executescript;executejavascript;executejs;firejavascript;firejs;firescript;
-isObjectThere=verifyObjectPresent;isobjectpresent;verifyobjectthere;objectisthere;objectisvisible;elementisvisible;verifyingobjectisthere;verifyingifobjectisthere;
+isObjectThere=verifyObjectPresent;elementpresence;isobjectpresent;verifyobjectthere;objectisthere;objectisvisible;elementisvisible;verifyingobjectisthere;verifyingifobjectisthere;isvisible;
 isObjectNotThere=verifyobjectnotPresent;objectisnotpresent;verifyobjectisnotthere;objectisnotthere;objectisnotvisible;elementisnotvisible;verifyingobjectisnotthere;verifyingifobjectisnotthere;
 selectItemFromDropdown=select;selectItem;choose;chooseItem;
 getTestElementAttribute=getobjectproperty;fetchobjectproperty;getobjectattribute;fetchobjectattribute;
@@ -46,3 +46,4 @@ getelementdimension=fetchelementdimension;getobjectdimension;fetchobjectdimensio
 invokeapi=invokeanapi;callapi;callanapi;runapi;executeapi;
 resizecurrentwindow=resizewindow;resizewindowto;windowresize;
 resizetodeafult=resizewindowtodefualt;sizetodefault;
+alert=alert;
