add comment to function and change in testSimulator splitAndReturnIndexedValue value condition

--- a/auto-test-executor/src/main/resources/learnCompiler.properties
+++ b/auto-test-executor/src/main/resources/learnCompiler.properties
@@ -48,5 +48,5 @@ invokeapi=invokeanapi;callapi;callanapi;runapi;executeapi;
 resizecurrentwindow=resizewindow;resizewindowto;windowresize;
 resizetodeafult=resizewindowtodefualt;sizetodefault;
 alert=alert;
-fetchValueFromVariable=fetchValueFromVariable;fetchValue;
+fetchValueFromVariable=fetchValueFromVariable;fetchValue;splitandfetchvalue;
 replaceall=replaceAll;
