add pdftextverification function to utility module

--- a/auto-test-executor/src/main/resources/learnCompiler.properties
+++ b/auto-test-executor/src/main/resources/learnCompiler.properties
@@ -50,3 +50,4 @@ resizetodeafult=resizewindowtodefualt;sizetodefault;
 alert=alert;
 fetchValueFromVariable=fetchValueFromVariable;fetchValue;splitandfetchvalue;
 replaceall=replaceAll;
+verifyPdfText=verifyPdfText;
