--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
 						</dependency>
 					</dependencies>
 						<configuration>
-							<projectFile>${basedir}/auto-test-api/src/test/java/com/api/projects/TT_APIsTests.xml</projectFile>
+							<projectFile>${basedir}/auto-test-api/src/test/java/com/api/projects/TT_APIs_AutomatedTests.xml</projectFile>
 							<!--<testSuite>IntegrationTestSuite</testSuite>-->
 							<!--<testCase></testCase>-->
 							<outputFolder>${project.build.directory}/surefire-reports</outputFolder>
@@ -164,6 +164,10 @@
 							<settingsFile>${basedir}/auto-test-api/ext/soapui-settings.xml</settingsFile>
 							  <projectProperties>
 								<value>execution_tag=${execution_tag}</value>
+								<value>traveler_apiendpoint=${traveler_apiendpoint}</value>
+								<value>traveler_apiendpoint=${traveler_apiendpoint}</value>
+								<value>user_email=${user_email}</value>
+								<value>user_password=${user_password}</value>
 							  </projectProperties>
 							<soapuiProperties>
 								<property>
